--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
 
     <!-- Карта объявлений -->
-    <section class="map map--faded">
+    <section class="map">
 
       <!-- Метки объявлений -->
       <div class="map__pins">
@@ -247,6 +247,6 @@
       <button class="error__button" href="#">Попробовать снова</button>
     </div>
   </template>
-
+  <script src="js/main.js"></script>
 </body>
 </html>
