Много правок в соответствии с замечаниями

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
     </div>
   </template>
   <script src="js/util.js"></script>
-  <script src="js/variables.js"></script>
+  <script src="js/general-elements.js"></script>
   <script src="js/main.js"></script>
   <script src="js/pin-main.js"></script>
   <script src="js/ad-form.js"></script>
