--- a/index.html
+++ b/index.html
@@ -251,9 +251,11 @@
   <script src="js/general-elements.js"></script>
   <script src="js/main.js"></script>
   <script src="js/pin-main.js"></script>
+  <script src="js/pin-main-drag.js"></script>
   <script src="js/ad-form.js"></script>
   <script src="js/mock.js"></script>
   <script src="js/pins.js"></script>
   <script src="js/cards.js"></script>
+  <script src="js/test-point.js"></script>
 </body>
 </html>
