--- a/index.html
+++ b/index.html
@@ -249,13 +249,15 @@
   </template>
   <script src="js/util.js"></script>
   <script src="js/general-elements.js"></script>
-  <script src="js/main.js"></script>
+
   <script src="js/pin-main.js"></script>
   <script src="js/pin-main-drag.js"></script>
   <script src="js/ad-form.js"></script>
-  <script src="js/mock.js"></script>
+  <script src="js/main.js"></script>
+  <script src="js/ad-form-messages.js"></script>
   <script src="js/pins.js"></script>
   <script src="js/cards.js"></script>
-  <script src="js/test-point.js"></script>
+
+  <script src="js/backend.js"></script>
 </body>
 </html>
