--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
   </template>
   <script src="js/util.js"></script>
   <script src="js/general-elements.js"></script>
-
+  <script src="js/backend.js"></script>
   <script src="js/pin-main.js"></script>
   <script src="js/pin-main-drag.js"></script>
   <script src="js/ad-form.js"></script>
@@ -257,7 +257,6 @@
   <script src="js/ad-form-messages.js"></script>
   <script src="js/pins.js"></script>
   <script src="js/cards.js"></script>
-
-  <script src="js/backend.js"></script>
+  <script src="js/filter.js"></script>
 </body>
 </html>
