добавляем загрузку картинок в форму в простейшем виде

--- a/index.html
+++ b/index.html
@@ -257,8 +257,7 @@
   <script src="js/cards.js"></script>
   <script src="js/main.js"></script>
   <script src="js/ad-form-messages.js"></script>
-
-
   <script src="js/filter.js"></script>
+  <script src="js/ad-form-upload.js"></script>
 </body>
 </html>
